# rust-notepad

./: CLAUDE.md  Cargo.toml  Cross.toml  IMPLEMENTATION_PLAN.md  README.md  notepad-plus-plus-clone-prd.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  core.rs  editor.rs  editor_services.rs  editor_state.rs  extensibility.rs  extensions.rs  folding.rs  lib.rs  main.rs  phase0.rs  phase2.rs  phase3.rs  plugins.rs  settings.rs  shortcuts.rs  theme.rs
src/app/: dialogs.rs  editor_panel.rs  find_panel.rs  menu_bar.rs  mod.rs  status_bar.rs  tab_bar.rs  toolbar.rs
tests/: extensibility_e2e.rs  phase3_e2e.rs  smoke_e2e.rs
