[package]
name = "rust-notepad"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["syntect"] }
rfd = "0.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.10"
